@@ -1,3 +1,7 @@
+2018-10-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* synctex.c: Cleanup for non-ascii file names (w32 only).
+
 2018-07-27  Karl Berry  <karl@freefriends.org>
 
 	* synctex_parser_api_level.txt: new file (contents "2.0.0").
